deploy/atlant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlant
spec:
  selector:
    app: atlant
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http2-atlant
    protocol: TCP
    port: 8082
